--- a/src/index.css
+++ b/src/index.css
@@ -30,14 +30,21 @@ code {
 .card-component {
   margin: 5px;
   display: inline-block;
-  width: 300px;
-  height: 500px;
+  width: 200px;
+  height: 300px;
   background: yellow;
   overflow: auto;
 }
 
 .card-component-name {
 
+}
+
+.card-illustration {
+  box-sizing: border-box;
+  margin: 5%;
+  width: 90%;
+  height: 80%;
 }
 
 /* --- */
