Cards can now have states that determine whether they're being inspected

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,14 @@ code {
 
 }
 
+.card-description {
+
+}
+
+.card-description-reversal {
+
+}
+
 .card-illustration {
   box-sizing: border-box;
   margin: 5%;
