--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: linear-gradient(#990073, #66004d);
   min-height: 100vh;
+  color: white;
 }
 
 body a {
