--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(#990073, #66004d);
+  background-image: linear-gradient(#008080, #00b386);
   min-height: 100vh;
   color: white;
 }
@@ -27,6 +27,7 @@ code {
 
 .card-index {
   text-align: center;
+  position: relative;
 }
 
 /* --- */
@@ -34,37 +35,38 @@ code {
 /* Card Component */
 
 .card-component {
+  background: #0086b3;
+  border: solid #4d1a00 2px;
+  border-radius: 3%;
+  box-shadow: 1px 3px 2px rgba(0,0,0,0.2);
   cursor: pointer;
-  margin: 5px;
   display: inline-block;
+  height: 300px;
+  margin: 5px;
+  overflow: hidden;
   position: relative;
   width: 200px;
-  height: 300px;
-  background: #0086b3;
-  overflow: hidden;
-  border-radius: 3%;
-  border: solid #4d1a00 2px;
-  box-shadow: 1px 3px 2px rgba(0,0,0,0.2);
 }
 
 .card-component-inspect {
-  position: fixed;
-  width: 100vw;
-  max-width: 680px;
   height: 125vw;
-  max-height: 850px;
   left: 15vw;
-  top: 3%;
+  max-height: 700px;
+  max-width: 529px;
+  position: absolute;
+  width: 100vw;
   z-index: 100;
 }
 
 .card-component-inspect-inner {
   background: #0086b3;
-  width: 90%;
-  height: 100%;
-  float: left;
-  overflow: auto;
+  border: solid #4d1a00 2px;
   border-radius: 3%;
+  box-shadow: 1px 3px 2px rgba(0,0,0,0.2);
+  float: left;
+  height: 100%;
+  overflow: auto;
+  width: 90%;
 }
 
 .card-description {
