--- a/src/index.css
+++ b/src/index.css
@@ -275,6 +275,22 @@ code {
 
 /* ---------- */
 
+/* Header */
+
+.title {
+  margin: 5px;
+}
+
+/* ---------- */
+
+/* Login & Signup */
+
+.user-signup-login-container {
+  margin: 10px;
+}
+
+/* ---------- */
+
 /* Navbar */
 
 .navbar {
@@ -294,6 +310,7 @@ code {
 .navbar-left a {
   color: white;
   margin-right: 1em;
+  margin-left: 5px;
 }
 
 .navbar-right {
