--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 /* font-family: 'Satisfy', cursive; */
 
 body {
+  backface-visibility: hidden;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -16,6 +17,10 @@ body {
 
 body a {
   text-decoration: none;
+}
+
+body img {
+  backface-visibility: hidden;
 }
 
 code {
@@ -36,6 +41,7 @@ code {
 
 .card-component {
   background: #0086b3;
+  backface-visibility: hidden;
   border: solid #4d1a00 2px;
   border-radius: 3%;
   box-shadow: 1px 3px 2px rgba(0,0,0,0.2);
@@ -46,10 +52,12 @@ code {
   overflow: hidden;
   position: relative;
   width: 200px;
+  z-index: -1;
 }
 
 .card-component-back {
   background: grey;
+  backface-visibility: hidden;
   border: solid #4d1a00 2px;
   border-radius: 3%;
   box-shadow: 1px 3px 2px rgba(0,0,0,0.2);
@@ -57,6 +65,7 @@ code {
   height: 300px;
   position: absolute;
   top: 5px;
+  transform: rotateY(180deg);
   left: 5px;
   width: 200px;
   z-index: 500;
@@ -65,10 +74,23 @@ code {
 
 .card-component-flip-container {
   border: solid white 2px;
-  height: 310px;
+  height: 314px;
   position: relative;
   perspective: 500px;
-  width: 210px;
+  width: 214px;
+}
+
+.card-component-flip-container-inner {
+  height: 100%;
+  position: relative;
+  transition: transform 0.8s;
+  transform: rotateY(180deg);
+  transform-style: preserve-3d;
+  width: 100%;
+}
+
+.card-component-flip-container-inner:hover {
+  transform: rotateY(180deg);
 }
 
 .card-component-flip-container-inner {
