--- a/src/index.css
+++ b/src/index.css
@@ -3,16 +3,12 @@
 
 body {
   backface-visibility: hidden;
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   background-image: linear-gradient(#008080, #00b386);
-  min-height: 100vh;
   color: white;
+  margin: 0;
+  min-height: 100vh;
+  overflow-x: hidden;
+  padding: 0;
 }
 
 body a {
@@ -461,6 +457,38 @@ code {
   padding: 5px;
   text-align: right;
   width: 48%;
+}
+
+.profile-notes-container {
+  border: white solid 2px;
+  border-radius: 5px;
+  margin-left: 13%;
+  max-height: 300px;
+  overflow-y: auto;
+  width: 85%;
+}
+
+.profile-note {
+  background: black;
+  border-radius: 5px;
+  margin: 5px;
+  padding: 0.3em 0.5em 0.3em 0.5em;
+}
+
+.profile-note-create {
+  background: white;
+  border-radius: 5px;
+  filter: invert(1);
+  margin: 5px;
+  width: 4em;
+}
+
+.profile-note-form {
+
+}
+
+.profile-note-delete {
+
 }
 
 /* ---------- */
