--- a/src/index.css
+++ b/src/index.css
@@ -379,6 +379,15 @@ code {
   width: 20px;
 }
 
+.lesson-form-text {
+  background: rgba(0,0,0,0);
+  border: dashed white 1px;
+  color: white;
+  margin: 1em 0 1em 0;
+  width: 100%;
+  height: 5em;
+}
+
 .lesson-image {
   display: inline-block;
   float: left;
@@ -386,6 +395,17 @@ code {
   margin-top: 1em;
   margin-left: 2%;
   width: 280px;
+}
+
+.lesson-next-button {
+  cursor: pointer;
+  bottom: 1em;
+  left: 0;
+  position: absolute;
+}
+
+.lesson-next-button:hover {
+  color: grey;
 }
 
 .lesson-text {
@@ -449,12 +469,14 @@ code {
   border-radius: 5px;
   color: black;
   left: 25%;
-  top: 10%;
-  position: absolute;
+  top: 25%;
+  padding: 1em;
+  position: fixed;
   text-align: center;
   -webkit-transition: left 1s;
   transition: left 1s;
   width: 50%;
+  z-index: 1000;
 }
 
 @keyframes onboard-popup-appear {
