Card unlock now adds user defined description to finish lesson

--- a/src/index.css
+++ b/src/index.css
@@ -408,6 +408,12 @@ code {
   color: grey;
 }
 
+.lesson-submit-button {
+  color: white;
+  background: black;
+  border: white solid 1px;
+}
+
 .lesson-text {
   display: inline-block;
   float: left;
