--- a/src/index.css
+++ b/src/index.css
@@ -235,6 +235,81 @@ code {
   z-index: 1;
 }
 
+/* 1 Magician */
+
+@keyframes m-rotate {
+  from { transform: rotate(0deg) }
+  to { transform: rotate(360deg) }
+}
+
+.magician-rotator-container {
+  border: solid red 3px;
+  border-radius: 100%;
+  height: 24%;
+  left: 40%;
+  position: absolute;
+  top: 40%;
+  width: 30%;
+}
+
+.magician-rotator {
+  border: solid red 3px;
+  border-radius: 50% 0 50% 0;
+  height: 100%;
+  left: -3px;
+  position: absolute;
+  top: -3px;
+  width: 100%;
+}
+
+/* 3 Empress */
+
+@keyframes empress-hues {
+  from { filter: hue-rotate(0deg); }
+  to { filter: hue-rotate(-90deg); }
+}
+
+@keyframes empress-snow {
+  from { filter: hue-rotate(0deg); top: -10%; transform: rotate(0deg); visibility: visible; }
+  to { filter: hue-rotate(-180deg); top: 110%; transform: rotate(360deg); visibility: visible; }
+}
+
+.empress-snow {
+  animation: empress-snow 10s infinite linear;
+  border-radius: 50% 0 50% 0;
+  background: green;
+  height: 2%;
+  position: absolute;
+  visibility: hidden;
+  width: 2%;
+  z-index: 2;
+}
+
+/* 10 Wheel */
+
+.wheel-container {
+  background: white;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+@keyframes wheel-rotate {
+  from { transform: rotate(0deg); }
+  from { transform: rotate(360deg); }
+}
+
+.wheel-inner {
+  animation: wheel-rotate 10s infinite linear;
+  left: 0;
+  position: absolute;
+  top: -5%;
+  width: 100%;
+  z-index: 1;
+}
+
 /* 13 Death */
 @keyframes death-pulse {
   0% { background: #003300 }
