Added strength animation, minor tweaks to high priestess

--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ code {
 .card-component {
   background: #0086b3;
   backface-visibility: hidden;
-  border: solid #4d1a00 2px;
+  border: solid #002133 2px;
   border-radius: 3%;
   box-shadow: 1px 3px 2px rgba(0,0,0,0.2);
   cursor: pointer;
@@ -60,7 +60,7 @@ code {
 .card-component-back {
   background: grey;
   backface-visibility: hidden;
-  border: solid #4d1a00 2px;
+  border: solid #002133 2px;
   border-radius: 3%;
   box-shadow: 1px 3px 2px rgba(0,0,0,0.2);
   cursor: pointer;
@@ -101,7 +101,7 @@ code {
   height: 125vw;
   left: 15vw;
   max-height: 563px;
-  max-width: 450px;
+  max-width: 420px;
   position: absolute;
   width: 100vw;
   z-index: 100;
@@ -114,7 +114,7 @@ code {
 
 .card-component-inspect-inner {
   background: #0086b3;
-  border: solid #4d1a00 2px;
+  border: solid #002133 2px;
   border-radius: 3%;
   box-shadow: 1px 3px 2px rgba(0,0,0,0.2);
   float: left;
@@ -139,7 +139,7 @@ code {
   width: 90%;
   height: 75%;
   overflow: hidden;
-  border: solid #4d1a00 2px;
+  border: solid #002133 2px;
 }
 
 .card-name {
@@ -178,7 +178,7 @@ code {
   background: green;
   width: 120%;
   cursor: pointer;
-  border: 2px #4d1a00 solid;
+  border: 2px #002133 solid;
   border-left: none;
 }
 
@@ -262,6 +262,21 @@ code {
   width: 100%;
 }
 
+/* 2 High Priestess */
+
+
+@keyframes inkblot {
+  0% { filter: blur(0) opacity(0) }
+  80% { filter: blur(0) opacity(0) }
+  83% { filter: blur(0) opacity(0.9) }
+  100% { filter: blur(1px) opacity(1) }
+}
+
+.inkblot {
+  animation: inkblot 16s linear;
+  filter: blur(1px)
+}
+
 /* 3 Empress */
 
 @keyframes empress-hues {
@@ -294,6 +309,32 @@ code {
   width: 200%;
   position: absolute;
   top: -30%;
+}
+
+/* 5 Hierophant */
+@keyframes featherfall-one {
+  0% { top: 30%; right: 20%; }
+  100% { top: 90%; right: 120%; }
+}
+
+@keyframes featherfall-two {
+  0% { top: 35%; right: 10%; }
+  100% { top: 70%; right: 120%; }
+}
+
+@keyframes featherfall-three {
+  0% { top: 40%; right: 15%; }
+  100% { top: 50%; right: 120%; }
+}
+
+@keyframes featherfall-four {
+  0% { top: 40%; right: 0%; }
+  100% { top: 30%; right: 120%; }
+}
+
+@keyframes featherfall-five {
+  0% { top: 40%; right: 0%; }
+  100% { top: 110%; right: 120%; }
 }
 
 /* 7 Chariot */
@@ -340,6 +381,41 @@ code {
   z-index: 1;
 }
 
+/* 11 Strength */
+
+.strength-cat {
+  left: 20%;
+  position: absolute;
+  top: -3%;
+  width: 50%;
+  z-index: 2;
+}
+
+.strength-mirror {
+  background-image: linear-gradient(#4d0f00, #ffad99);
+  height: 70%;
+  left: 0;
+  position: absolute;
+  top: 40%;
+  width: 100%;
+}
+
+@keyframes strength-lion {
+  from { filter: blur(30px); opacity: 0.2 }
+  to { filter: blur(1px); opacity: 0.7 }
+}
+
+.strength-lion {
+  animation: strength-lion 8s;
+  filter: blur(1px);
+  left: 5%;
+  opacity: 0.7;
+  position: absolute;
+  top: 40%;
+  width: 90%;
+  z-index: 1;
+}
+
 /* 13 Death */
 @keyframes death-pulse {
   0% { background: #003300 }
@@ -351,32 +427,7 @@ code {
   animation: death-pulse 4s infinite alternate;
 }
 
-/* Raven Feather */
-@keyframes featherfall-one {
-  0% { top: 30%; right: 20%; }
-  100% { top: 90%; right: 120%; }
-}
-
-@keyframes featherfall-two {
-  0% { top: 35%; right: 10%; }
-  100% { top: 70%; right: 120%; }
-}
-
-@keyframes featherfall-three {
-  0% { top: 40%; right: 15%; }
-  100% { top: 50%; right: 120%; }
-}
-
-@keyframes featherfall-four {
-  0% { top: 40%; right: 0%; }
-  100% { top: 30%; right: 120%; }
-}
-
-@keyframes featherfall-five {
-  0% { top: 40%; right: 0%; }
-  100% { top: 110%; right: 120%; }
-}
-/* ---------- */
+/* 18 Moon */
 
 @keyframes firefly {
   0% { opacity: 0 }
@@ -387,18 +438,6 @@ code {
 
 .animation-firefly {
   animation: firefly 12s infinite;
-}
-
-@keyframes inkblot {
-  0% { filter: blur(0) opacity(0) }
-  80% { filter: blur(0) opacity(0) }
-  95% { filter: blur(0) opacity(0.9) }
-  100% { filter: blur(1px) opacity(1) }
-}
-
-.inkblot {
-  animation: inkblot 16s linear;
-  filter: blur(1px)
 }
 
 @keyframes rainbow-shift {
