--- a/src/index.css
+++ b/src/index.css
@@ -130,7 +130,7 @@ code {
 }
 
 .card-component-back {
-  background: grey;
+  background-color: grey;
   backface-visibility: hidden;
   border: solid #002133 2px;
   border-radius: 3%;
@@ -143,6 +143,18 @@ code {
   left: 5px;
   width: 200px;
   z-index: 500;
+}
+
+.card-locked {
+  background-color: grey;
+  border: solid #002133 2px;
+  border-radius: 3%;
+  box-shadow: 1px 3px 2px rgba(0,0,0,0.2);
+  cursor: pointer;
+  display: inline-block;
+  height: 300px;
+  margin: 5px;
+  width: 200px;
 }
 
 .card-component-corner-left {
