--- a/src/index.css
+++ b/src/index.css
@@ -130,7 +130,10 @@ code {
 }
 
 .card-component-back {
-  background-color: grey;
+  background-image: url('./Assets/Card_Back.png');
+  background-color: #737373;
+  background-position: center;
+  background-size: cover;
   backface-visibility: hidden;
   border: solid #002133 2px;
   border-radius: 3%;
@@ -146,7 +149,10 @@ code {
 }
 
 .card-locked {
-  background-color: grey;
+  background-image: url('./Assets/Card_Back.png');
+  background-color: #737373;
+  background-position: center;
+  background-size: cover;
   border: solid #002133 2px;
   border-radius: 3%;
   box-shadow: 1px 3px 2px rgba(0,0,0,0.2);
