--- a/src/index.css
+++ b/src/index.css
@@ -470,6 +470,25 @@ code {
   100% { top: 110%; right: 120%; }
 }
 
+/* Lovers */
+
+@keyframes lovers-snow {
+  from { top: -10%; visibility: visible; }
+  to { top: 110%; visibility: visible; }
+}
+
+.lovers-snow {
+  animation: lovers-snow 5s infinite linear;
+  border: solid white 2px;
+  border-top: none;
+  border-left: none;
+  border-radius: 100%;
+  height: 4%;
+  position: absolute;
+  visibility: hidden;
+  width: 5%;
+}
+
 /* 7 Chariot */
 
 @keyframes chariot-wheel {
