Tweaks to the devil animation

--- a/src/index.css
+++ b/src/index.css
@@ -625,19 +625,16 @@ code {
 /* 15 Devil */
 
 @keyframes devil-eye {
-  0% { transform: rotateY(0deg); left: 17%;}
-  10% { transform: rotateY(20deg); left: 25%;}
-  20% { transform: rotateY(20deg); left: 25%;}
-  30% { transform: rotateY(0deg); left: 17%;}
+  0% { transform: rotateY(0deg); left: 17%; top: 30%}
+  10% { transform: rotateY(23deg); left: 25%; top: 31%}
+  20% { transform: rotateY(23deg); left: 25%; top: 31%}
+  30% { transform: rotateY(0deg); left: 17%; top: 30%}
   40% { transform: rotateY(0deg); left: 17%; top: 30%;}
-  50% { transform: rotateY(-20deg); left: 10%; top: 31%;}
-  60% { transform: rotateY(-20deg); left: 10%; top: 31%;}
+  50% { transform: rotateY(-17deg); left: 10%; top: 30.5%;}
+  60% { transform: rotateY(-17deg); left: 10%; top: 30.5%;}
   70% { transform: rotateY(0deg); left: 17%; top: 30%;}
   100% { transform: rotateY(0deg); left: 17%;}
 }
-
-/* top 20% - 40% */
-/* left 30% - 5% */
 
 /* 16 Tower */
 
