Redid temperance, will need to enlist my artist friends for this project at some point

--- a/src/index.css
+++ b/src/index.css
@@ -606,7 +606,7 @@ code {
 }
 
 .rainbow-shift {
-  animation: rainbow-shift 10s infinite linear;
+  animation: rainbow-shift 10s infinite linear reverse;
 }
 
 /* 13 Death */
